--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<style>
 body {
 	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 	background-size: 400% 400%;
@@ -16,3 +17,4 @@ body {
 		background-position: 0% 50%;
 	}
 }
+<style/>
