--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <style>
-body, html {
-    background-color: #000;
-    color: #fff;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+body {
+	background: linear-gradient(-45deg, #d52323, #d53e23, #d55823, #d57323, #d58e23, #d5a923, #d5c323, #ccd523, #b1d523, #97d523, #79d523, #5ed523, #44d523, #29d523, #23d538, #23d552, #23d56d, #23d588, #23d5a3, #23d5bd, #23d2d5, #23b7d5, #239dd5, #2382d5, #2367d5, #234dd5, #2332d5, #2f23d5, #4a23d5, #6423d5, #7f23d5, #9a23d5, #b423d5, #cf23d5, #d523c0, #d523a6, #d5238b, #d52370, #d52355, #d5233b);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
 }
-canvas {
-    position:absolute;
-    top:0;
-    left:0
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 <style/>
