--- a/index.html
+++ b/index.html
@@ -68,3 +68,18 @@ body {
 		background-position: 95% 100%;
 	}
 <style/>
+<head>
+  <title>Scripts</title>
+  <link rel="shortcut icon" href="./bash.png" type="image/png">
+</head>
+<style>
+body{
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 20px;
+    color: #333;
+}
+a {
+    text-decoration: none;
+}
+</style>
