--- a/index.html
+++ b/index.html
@@ -67,12 +67,10 @@ body {
 	95% {
 		background-position: 95% 100%;
 	}
-<style/>
 <head>
   <title>Scripts</title>
   <link rel="shortcut icon" href="./bash.png" type="image/png">
 </head>
-<style>
 body{
     max-width: 1000px;
     margin: 0 auto;
@@ -83,3 +81,6 @@ a {
     text-decoration: none;
 }
 </style>
+</p><br/>
+<h1 align="Center"><i>Windows_Upgrade</i></h1>
+ <br/>
