--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+  <title>Scripts</title>
+  <link rel="shortcut icon" href="./bash.png" type="image/png">
+</head>
 <style>
 body {
 	background: linear-gradient(-45deg, #d52323, #d53e23, #d55823, #d57323, #d58e23, #d5a923, #d5c323, #ccd523, #b1d523, #97d523, #79d523, #5ed523, #44d523, #29d523, #23d538, #23d552, #23d56d, #23d588, #23d5a3, #23d5bd, #23d2d5, #23b7d5, #239dd5, #2382d5, #2367d5, #234dd5, #2332d5, #2f23d5, #4a23d5, #6423d5, #7f23d5, #9a23d5, #b423d5, #cf23d5, #d523c0, #d523a6, #d5238b, #d52370, #d52355, #d5233b);
@@ -67,20 +71,18 @@ body {
 	95% {
 		background-position: 95% 100%;
 	}
-<head>
-  <title>Scripts</title>
-  <link rel="shortcut icon" href="./bash.png" type="image/png">
-</head>
+</style>
+<style>
 body{
     max-width: 1000px;
     margin: 0 auto;
     padding: 20px;
-    color: #333;
+    color: #ffffff;
 }
 a {
     text-decoration: none;
 }
 </style>
 </p><br/>
-<h1 align="Center"><i>Windows_Upgrade</i></h1>
+<h1 align="Center"><i>Scripts</i></h1>
  <br/>
