--- a/index.html
+++ b/index.html
@@ -84,5 +84,9 @@ a {
 }
 </style>
 </p><br/>
+ <br/>
+<p align="center">
+<img src="./bash.png" width="150" height="150"/>
+</p><br/>
 <h1 align="Center"><i>Scripts</i></h1>
  <br/>
