--- a/index.html
+++ b/index.html
@@ -144,6 +144,6 @@ a {
     }
   }
 }
- <br/>
-<button><i><a href="https://dimoroz772.github.io/dimoroz772/" style="color:#F0F8FF"><b>Back</b></a><br/><i/></button>
 </style>
+ <br/>
+<button><a href="https://dimoroz772.github.io/dimoroz772/"><b>Back</b></a><br/></button>
