--- a/index.html
+++ b/index.html
@@ -146,4 +146,4 @@ a {
 }
 </style>
  <br/>
-<button><a href="https://dimoroz772.github.io/dimoroz772/"><b>Back</b></a><br/></button>
+<button></button>
