--- a/index.html
+++ b/index.html
@@ -92,60 +92,34 @@ a {
  <br/>
 
 <style>
-$color: #2194E0;
-
-@keyframes sheen {
-  0% {
-    transform: skewY(-45deg) translateX(0);
-  }
-  100% {
-    transform: skewY(-45deg) translateX(12.5em);
-  }
+:root {
+  --button-height: 60px;
 }
 
-.wrapper {
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+html {
+  box-sizing: border-box;
+  height: 100%;
 }
-.button {
-  padding: 0.75em 2em;
-  text-align: center;
-  text-decoration: none;
-  color: $color;
-  border: 2px solid $color;
-  font-size: 24px;
+
+.Button {
+  background: 4px solid white;
+  border: none;
   display: inline-block;
-  border-radius: 0.3em;
-  transition: all 1s ease-in-out;
-  position: relative;
+  height: var(--button-height);
   overflow: hidden;
-  &:before {
-    content: "";
-    background-color: rgba(255,255,255,0.5);
-    height: 100%;
-    width: 3em;
-    display: block;
-    position: absolute;
-    top: 0;
-    left: -4.5em;
-    transform: skewX(-45deg) translateX(0);
-    transition: none;
-  }
-  &:hover {
-    background-color: $color;
-    color: #fff;
-    border-bottom: 4px solid darken($color, 10%);
-    &:before {
-      transform: skewX(-45deg) translateX(27em);
-     transition: all 0.5s ease-in-out;
-    }
-  }
+  padding: 0 40px;
+  position: relative;
+}
+
+.Button,
+svg {
+  cursor: pointer;
+  font-family: 'Roboto';
+  font-size: 24px;
+  text-transform: uppercase;
 }
 </style>
 
-<div class="wrapper">
-  <a href="https://github.com/dimoroz772/Scripts/blob/main/Setting_up_automated_backup_of_active_network_equipment_configurations" class="button">Setting up automated backup of active network equipment configurations</a>
-</div>
+<button class="Button js-button">
+  Hover over me
+</button>
