--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ a{
 }
 
 a span{
-  position: relative;
+  position: static;
   z-index: 2;
 }
 
@@ -141,5 +141,5 @@ a:hover:after{
 </style>
 
 <div class="wrapper">
-  <a href="#"><span>Hover Me!</span></a>
+  <a href="#"><span>Setting up automated backup of active network equipment configurations</span></a>
 </div>
