--- a/index.html
+++ b/index.html
@@ -141,5 +141,5 @@ a:hover:after{
 </style>
 
 <div class="wrapper">
-  <a href="#"><span>Setting up automated backup of active network equipment configurations</span></a>
+  <a href="#"><span color: #FFFFFF>Setting up automated backup of active network equipment configurations</span></a>
 </div>
