--- a/index.html
+++ b/index.html
@@ -139,5 +139,5 @@ a:hover:after{
 </style>
 
 <div class="wrapper">
-  <a href="#"><span color: #FFFFFF>Setting up automated backup of active network equipment configurations</span></a>
+  <a href="#"><span color: #FFFFFF><b>Setting up automated backup of active network equipment configurations</b></span></a>
 </div>
