--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ a {
 
 a{
   display: block;
-  width: 740px;
+  width: 770px;
   height: 40px;
   line-height: 40px;
   font-size: 18px;
@@ -139,5 +139,5 @@ a:hover:after{
 </style>
 
 <div class="wrapper">
-  <a href="#"><span color: #FFFFFF><b>Setting up automated backup of active network equipment configurations</b></span></a>
+  <a href="#"><span color: #FFFFFF><b><i>Setting up automated backup of active network equipment configurations</i></b></span></a>
 </div>
