--- a/index.html
+++ b/index.html
@@ -139,5 +139,9 @@ a:hover:after{
 </style>
 
 <div class="wrapper">
-  <a href="#"><span color: #FFFFFF><b><i>Setting up automated backup of active network equipment configurations</i></b></span></a>
+  <a href="https://github.com/dimoroz772/Scripts/blob/main/Setting_up_automated_backup_of_active_network_equipment_configurations"><span color: #FFFFFF><b><i>Setting up automated backup of active network equipment configurations</i></b></span></a>
+</div>
+<div class="wrapper">
+  <a href="https://github.com/dimoroz772/Scripts/blob/main/GUI_Servers_Connections"><span color: #FFFFFF><b><i>GUI Servers Connections
+</i></b></span></a>
 </div>
