--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@ a:hover:after{
 
 <div class="wrapper">
   <a href="https://github.com/dimoroz772/Scripts/blob/main/Setting_up_automated_backup_of_active_network_equipment_configurations"><span color: #FFFFFF><b><i>Setting up automated backup of active network equipment configurations</i></b></span></a>
-</div>
+</div><br/>
+ </br>
 <div class="wrapper">
   <a href="https://github.com/dimoroz772/Scripts/blob/main/GUI_Servers_Connections"><span color: #FFFFFF><b><i>GUI Servers Connections
 </i></b></span></a>
