--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ body {
 	background-size: 400% 400%;
 	animation: gradient 60s ease infinite;
 	height: 100vh;
+	max-width: 1000px;
 }
 
 @keyframes gradient {
