--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ html,
 .glow-on-hover {
     border: none;
     outline: none;
-    color: #fff;
+    color: #000000;
     cursor: pointer;
     position: relative;
     z-index: 0;
@@ -110,7 +110,7 @@ html,
     left:-2px;
     background-size: 400%;
     z-index: -1;
-    filter: blur(5px);
+    filter: blur(20px);
     width: calc(200% + 4px);
     height: calc(200% + 4px);
     animation: glowing 20s linear infinite;
@@ -133,7 +133,6 @@ html,
     position: absolute;
     width: 200%;
     height: 200%;
-    background: #111;
     left: 0;
     top: 0;
     border-radius: 20px;
