--- a/index.html
+++ b/index.html
@@ -89,17 +89,19 @@ a {
 <h1 align="Center"><i>Scripts</i></h1>
  </br>
 
-<style>
+<style button>
 html,
 
 .glow-on-hover {
+    width: 250px;
+    height: 50px;
     border: none;
     outline: none;
     color: #000000;
     cursor: pointer;
     position: relative;
     z-index: 0;
-    border-radius: 20px;
+    border-radius: 10px;
 }
 
 .glow-on-hover:before {
@@ -110,13 +112,17 @@ html,
     left:-2px;
     background-size: 400%;
     z-index: -1;
-    filter: blur(20px);
-    width: calc(200% + 4px);
-    height: calc(200% + 4px);
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
     animation: glowing 20s linear infinite;
     opacity: 0;
     transition: opacity .3s ease-in-out;
-    border-radius: 20px;
+    border-radius: 10px;
+}
+
+.glow-on-hover:active {
+    color: #000
 }
 
 .glow-on-hover:active:after {
@@ -131,11 +137,11 @@ html,
     z-index: -1;
     content: '';
     position: absolute;
-    width: 200%;
-    height: 200%;
+    width: 100%;
+    height: 100%;
     left: 0;
     top: 0;
-    border-radius: 20px;
+    border-radius: 10px;
 }
 
 @keyframes glowing {
@@ -143,5 +149,6 @@ html,
     50% { background-position: 400% 0; }
     100% { background-position: 0 0; }
 }
+
 </style><br/>
-<button class="glow-on-hover" type="button">HOVER ME, THEN CLICK ME!</button>
+<button class="glow-on-hover" type="button">HOVER MgfjdjgfdghjE, THEN CLICK ME!</button>
