--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@ html,
     position: absolute;
     top: -2px;
     left:-2px;
+    background-size: 400%;
     z-index: -1;
     filter: blur(5px);
     width: calc(100% + 4px);
