--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ html,
     top: -2px;
     left:-2px;
     background-size: 400%;
+    font-size: 5vw;
     z-index: -1;
     filter: blur(5px);
     width: calc(100% + 4px);
