--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ a {
     line-height: 50px;
     font-weight: bold;
     text-decoration: none;
-    background: #ffffff;
+    background: rgba(255,255,0,0);
     text-align: center;
     color: #000000;
     text-transform: uppercase;
