--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@ a {
     text-decoration: none;
     background: rgba(255,255,0,0);
     text-align: center;
-    color: #000000;
+    color: #ffffff;
     text-transform: uppercase;
     letter-spacing: 1px;
-    border: 3px solid #333;
+    border: 3px solid #ffffff;
     transition: all .35s;
   }
   
@@ -135,7 +135,7 @@ a {
     top: calc(50% - 15px);
     left: calc(50% - 15px);
     transform: rotate(-45deg);
-    fill: #ff5100;
+    fill: #ffffff;
     transition: all .35s;
   }
   
