--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ a {
     top: calc(50% - 15px);
     left: calc(50% - 15px);
     transform: rotate(-45deg);
-    fill: #ffffff;
+    fill: #ff0000;
     transition: all .35s;
   }
   
