--- a/index.html
+++ b/index.html
@@ -91,9 +91,7 @@ a {
 
 <style>
 .wrapper{
-    position: fixed;
-    top: 45%;
-    left: 30.5%;
+    position: static;
     transform: translate(-50%, -50%);
   }
   
