--- a/Web_setting_up_automated_backup_of_active_network_equipment_configurations.html
+++ b/Web_setting_up_automated_backup_of_active_network_equipment_configurations.html
@@ -41,7 +41,7 @@ th, td {
 <p align="Center">
 <img src="./bash.png" width="150" height="150"/>
 </p><br/>
-<h1 align="Center" style="color:grey"><i>Setting up automated backup of active network equipment configurations</i></h1>
+<h1 align="Center" style="color: rgb(255, 255, 255)"><i>Setting up automated backup of active network equipment configurations</i></h1>
 <html>
 <body>
 <div align="Center">
