--- a/Web_GUI_Servers_Connections.html
+++ b/Web_GUI_Servers_Connections.html
@@ -1,1 +1,137 @@
-
+<head>
+  <title>GUI Servers Connections</title>
+  <link rel="shortcut icon" href="./bash.png" type="image/png">
+</head>
+<style>
+body{
+    background-image: url('Fon_Scripts.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 20px;
+    color: #333;
+}
+a {
+    text-decoration: none;
+}
+</style>
+<style> 
+table{
+border: 1px black solid;
+}
+th, td {
+   border: 1px solid grey;
+}
+</style>
+<style>
+    button {
+    position: static;
+    border: 1px solid #808080;
+    font-size: 18px;
+    background-color: rgba(28,28,28,0);
+    transition: 0.5s;
+    }
+    button:hover {
+    background-color: #ff0000;
+    }
+</style>
+ <br/>
+<p align="Center">
+<img src="./bash.png" width="150" height="150"/>
+</p><br/>
+<h1 align="Center" style="color:rgb(255, 255, 255)"><i>GUI Servers Connections</i></h1>
+<html>
+<body>
+<div align="Center">
+<table>
+ <thead>
+  <tr>
+   <th style="color:#ff0000" colspan="2" align="Left">#!/bin/bash<br/>
+    <br/>
+    # clear the screen<br/>
+    tput clear<br/>
+    <br/>
+    # Move cursor to screen location X,Y (top left is 0,0)<br/>
+    tput cup 3 15<br/>
+    <br/>
+    # Set a foreground colour using ANSI escape<br/>
+    tput setaf 1<br/>
+    echo "GUI Servers connections"<br/>
+    tput sgr0<br/>
+    <br/>
+    tput cup 5 15<br/>
+    # Set reverse video mode<br/>
+    tput rev<br/>
+    tput setaf 1<br/>
+    echo "W-I-N-D-O-W-S |#|#| S-E-R-V-E-R-S"<br/>
+    tput sgr0<br/>
+    <br/>
+    tput setaf 1<br/>
+    tput cup 7 15<br/>
+    echo "1. Windows Server #1"<br/>
+    <br/>
+    tput cup 9 15<br/>
+    # Set reverse video mode<br/>
+    tput rev<br/>
+    tput setaf 1<br/>
+    echo "L-I-N-U-X |#|#| S-E-R-V-E-R-S"<br/>
+    tput sgr0<br/>
+    <br/>
+    tput setaf 1<br/>
+    tput cup 11 15<br/>
+    echo "2. Linux Server #1"<br/>
+    <br/>
+    tput setaf 1<br/>
+    tput cup 13 15<br/>
+    echo "3. Linux Server #2"<br/>
+    <br/>
+    tput setaf 1<br/>
+    tput cup 15 15<br/>
+    echo "4. Linux Server #3"<br/>
+    <br/>
+    tput cup 17 15<br/>
+    # Set reverse video mode<br/>
+    tput rev<br/>
+    tput setaf 1<br/>
+    echo "F U N C T I O N S"<br/>
+    tput sgr0<br/>
+    <br/>
+    tput setaf 1<br/>
+    tput cup 19 15<br/>
+    echo "5. Exit"<br/>
+    <br/>
+    # Set bold mode<br/>
+    tput setaf 7<br/>
+    tput bold<br/>
+    tput cup 21 15<br/>
+    read -p "Enter your choice: " choice<br/>
+    <br/>
+    tput clear<br/>
+    tput sgr0<br/>
+    tput rc<br/>
+    <br/>
+    case "$choice" in<br/>
+        "1") xfreerdp /v:10.10.10.10 /u:admin /p:password /size:97%h<br/>
+             ;;<br/>
+        "2") sshpass -p password ssh root@10.10.10.11<br/>
+             ;;<br/>
+        "3") ssh -i /home/larry/.ssh/larry larry@10.10.10.12<br/>
+             ;;<br/>
+        "4") ssh -i /home/larry/.ssh/larry larry@10.10.10.13<br/>
+             ;;<br/>
+        "5") exit<br/>
+             ;;<br/>
+        *) echo "Wrong choice... Please try again."<br/>
+           show_main_menu<br/>
+           ;;<br/>
+      esac</th>
+  </tr>
+ </thead>
+</table>
+</div>
+</body>
+</html>
+ <br/>
+<button><i><a href="https://dimoroz772.github.io/DDT4ALL/" style="color:#F0F8FF"><b>Back</b></a><br/><i/></button>
