--- a/Web_GUI_Servers_Connections.html
+++ b/Web_GUI_Servers_Connections.html
@@ -48,7 +48,7 @@ th, td {
 <table>
  <thead>
   <tr>
-   <th style="color:#ff0000" colspan="2" align="Left">#!/bin/bash<br/>
+   <th style="color:#5eff00" colspan="2" align="Left">#!/bin/bash<br/>
     <br/>
     # clear the screen<br/>
     tput clear<br/>
