--- a/Web_GUI_Servers_Connections.html
+++ b/Web_GUI_Servers_Connections.html
@@ -134,4 +134,4 @@ th, td {
 </body>
 </html>
  <br/>
-<button><i><a href="https://dimoroz772.github.io/DDT4ALL/" style="color:#F0F8FF"><b>Back</b></a><br/><i/></button>
+<button><i><a href="https://dimoroz772.github.io/Scripts/" style="color:#F0F8FF"><b>Back</b></a><br/><i/></button>
