--- a/Web_setting_up_automated_backup_of_active_network_equipment_configurations.html
+++ b/Web_setting_up_automated_backup_of_active_network_equipment_configurations.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Web setting up automated backup of active network equipment configurations</title>
+  <title>Setting up automated backup of active network equipment configurations</title>
   <link rel="shortcut icon" href="./bash.png" type="image/png">
 </head>
  <head>
