--- a/Web_setting_up_automated_backup_of_active_network_equipment_configurations.html
+++ b/Web_setting_up_automated_backup_of_active_network_equipment_configurations.html
@@ -212,6 +212,6 @@ chmod 777 /mnt/tftpboot
 mv /mnt/tftpboot /mnt/Backups_$(date +%d.%m.%Y)
 
 <a class="neonText1">#Очистка каталога tftpboot:</a>
-rm -rf /var/lib/tftpboot/*
+rm -rf /var/lib/tftpboot/*</a>
 </p>
 </div>
