--- a/Web_GUI_Servers_Connections.html
+++ b/Web_GUI_Servers_Connections.html
@@ -2,136 +2,137 @@
   <title>GUI Servers Connections</title>
   <link rel="shortcut icon" href="./bash.png" type="image/png">
 </head>
+ <head>
+  <meta charset="utf-8">
+ </head>
 <style>
+.neonText1 {
+  color: #87CEFA;
+  text-shadow:
+      0 0 1px #4169E1,
+      0 0 1px #4169E1,
+      0 0 1px #4169E1,
+      0 0 1px #4169E1,
+      0 0 1px #4169E1,
+      0 0 1px #4169E1,
+      0 0 1px #4169E1,
+      0 0 1px #4169E1;
+}
+.neonText2 {
+  color: #00FF00;
+  text-shadow:
+      0 0 1px #006400,
+      0 0 1px #006400,
+      0 0 1px #006400,
+      0 0 1px #006400,
+      0 0 1px #006400,
+      0 0 1px #006400,
+      0 0 1px #006400,
+      0 0 1px #006400;
+}
+/* Additional styling */
 body{
-    background-image: url('Fon_Scripts.jpg');
+    background-color: black;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    max-width: 1000px;
+    max-width: 1400px;
     margin: 0 auto;
     padding: 20px;
-    color: #333;
+    color: #cfcfcf;
 }
 a {
     text-decoration: none;
 }
-</style>
-<style> 
-table{
-border: 1px black solid;
+p {
+  text-indent: 1.5em;
+  font-family: monospace;
+  font-weight: 500;
+  white-space: pre;
+  line-height: 2;
+  letter-spacing: 1px;
 }
-th, td {
-   border: 1px solid grey;
-}
 </style>
-<style>
-    button {
-    position: static;
-    border: 1px solid #808080;
-    font-size: 18px;
-    background-color: rgba(28,28,28,0);
-    transition: 0.5s;
-    }
-    button:hover {
-    background-color: #ff0000;
-    }
-</style>
- <br/>
-<p align="Center">
-<img src="./bash.png" width="150" height="150"/>
-</p><br/>
-<h1 align="Center" style="color:rgb(255, 255, 255)"><i>GUI Servers Connections</i></h1>
-<html>
-<body>
-<div align="Center">
-<table>
- <thead>
-  <tr>
-   <th style="color:#5eff00" colspan="2" align="Left">#!/bin/bash<br/>
-    <br/>
-    # clear the screen<br/>
-    tput clear<br/>
-    <br/>
-    # Move cursor to screen location X,Y (top left is 0,0)<br/>
-    tput cup 3 15<br/>
-    <br/>
-    # Set a foreground colour using ANSI escape<br/>
-    tput setaf 1<br/>
-    echo "GUI Servers connections"<br/>
-    tput sgr0<br/>
-    <br/>
-    tput cup 5 15<br/>
-    # Set reverse video mode<br/>
-    tput rev<br/>
-    tput setaf 1<br/>
-    echo "W-I-N-D-O-W-S |#|#| S-E-R-V-E-R-S"<br/>
-    tput sgr0<br/>
-    <br/>
-    tput setaf 1<br/>
-    tput cup 7 15<br/>
-    echo "1. Windows Server #1"<br/>
-    <br/>
-    tput cup 9 15<br/>
-    # Set reverse video mode<br/>
-    tput rev<br/>
-    tput setaf 1<br/>
-    echo "L-I-N-U-X |#|#| S-E-R-V-E-R-S"<br/>
-    tput sgr0<br/>
-    <br/>
-    tput setaf 1<br/>
-    tput cup 11 15<br/>
-    echo "2. Linux Server #1"<br/>
-    <br/>
-    tput setaf 1<br/>
-    tput cup 13 15<br/>
-    echo "3. Linux Server #2"<br/>
-    <br/>
-    tput setaf 1<br/>
-    tput cup 15 15<br/>
-    echo "4. Linux Server #3"<br/>
-    <br/>
-    tput cup 17 15<br/>
-    # Set reverse video mode<br/>
-    tput rev<br/>
-    tput setaf 1<br/>
-    echo "F U N C T I O N S"<br/>
-    tput sgr0<br/>
-    <br/>
-    tput setaf 1<br/>
-    tput cup 19 15<br/>
-    echo "5. Exit"<br/>
-    <br/>
-    # Set bold mode<br/>
-    tput setaf 7<br/>
-    tput bold<br/>
-    tput cup 21 15<br/>
-    read -p "Enter your choice: " choice<br/>
-    <br/>
-    tput clear<br/>
-    tput sgr0<br/>
-    tput rc<br/>
-    <br/>
-    case "$choice" in<br/>
-        "1") xfreerdp /v:10.10.10.10 /u:admin /p:password /size:97%h<br/>
-             ;;<br/>
-        "2") sshpass -p password ssh root@10.10.10.11<br/>
-             ;;<br/>
-        "3") ssh -i /home/larry/.ssh/larry larry@10.10.10.12<br/>
-             ;;<br/>
-        "4") ssh -i /home/larry/.ssh/larry larry@10.10.10.13<br/>
-             ;;<br/>
-        "5") exit<br/>
-             ;;<br/>
-        *) echo "Wrong choice... Please try again."<br/>
-           show_main_menu<br/>
-           ;;<br/>
-      esac</th>
-  </tr>
- </thead>
-</table>
+<div class="container">
+<p class="neonText2">
+<a class="neonText1">#!/bin/bash
+ 
+# clear the screen</a>
+tput clear
+ 
+<a class="neonText1"># Move cursor to screen location X,Y (top left is 0,0)</a>
+tput cup 3 15
+ 
+<a class="neonText1"># Set a foreground colour using ANSI escape</a>
+tput setaf 1
+echo "GUI Servers connections"
+tput sgr0
+ 
+tput cup 5 15
+<a class="neonText1"># Set reverse video mode</a>
+tput rev
+tput setaf 1
+echo "W-I-N-D-O-W-S |#|#| S-E-R-V-E-R-S"
+tput sgr0
+ 
+tput setaf 1
+tput cup 7 15
+echo "1. Windows Server #1"
+ 
+tput cup 9 15
+<a class="neonText1"># Set reverse video mode</a>
+tput rev
+tput setaf 1
+echo "L-I-N-U-X |#|#| S-E-R-V-E-R-S"
+tput sgr0
+ 
+tput setaf 1
+tput cup 11 15
+echo "2. Linux Server #1"
+ 
+tput setaf 1
+tput cup 13 15
+echo "3. Linux Server #2"
+ 
+tput setaf 1
+tput cup 15 15
+echo "4. Linux Server #3"
+ 
+tput cup 17 15
+<a class="neonText1"># Set reverse video mode</a>
+tput rev
+tput setaf 1
+echo "F U N C T I O N S"
+tput sgr0
+ 
+tput setaf 1
+tput cup 19 15
+echo "5. Exit"
+
+<a class="neonText1"># Set bold mode</a>
+tput setaf 7
+tput bold
+tput cup 21 15
+read -p "Enter your choice: " choice
+ 
+tput clear
+tput sgr0
+tput rc
+ 
+case "$choice" in
+    "1") xfreerdp /v:10.10.10.10 /u:admin /p:password /size:97%h
+         ;;
+    "2") sshpass -p password ssh root@10.10.10.11
+         ;;
+    "3") ssh -i /home/larry/.ssh/larry larry@10.10.10.12
+         ;;
+    "4") ssh -i /home/larry/.ssh/larry larry@10.10.10.13
+         ;;
+    "5") exit
+         ;;
+    *) echo "Wrong choice... Please try again."
+       show_main_menu
+       ;;
+  esac</a>
+</p>
 </div>
-</body>
-</html>
- <br/>
-<button><i><a href="https://dimoroz772.github.io/Scripts/" style="color:#F0F8FF"><b>Back</b></a><br/><i/></button>
